package app.daos;

import app.entities.Event;
import jakarta.persistence.EntityManagerFactory;

public class EventDAO extends JigDAO<Event> {

    public EventDAO(EntityManagerFactory emf) {
        super(emf, Event.class, Event.class.getSimpleName());
    }
}
